# pytest-appium-testing

./: Makefile  get_all_device_app_package.py  pyproject.toml
chapter/chapter_6/: ch06_04_desired_capability.py  ch06_05_appium_script.py
chapter/chapter_6/chapter_7/: ch07_01_find_element.py  (+4 more)
chapter/chapter_7/: ch07_04_find_element.py  ch07_05_find_element.py  ch07_05_find_elemnt_appiumby.py  ch07_05_find_elemnt_by.py  ch07_06_check_uiautomator.py  ch07_06_new_uiselector_classname.py  ch07_06_new_uiselector_description.py  ch07_06_new_uiselector_id_class_text.py  ch07_06_new_uiselector_resourceid.py  ch07_06_new_uiselector_resourceidmatches.py  ch07_06_new_uiselector_sub_grand.py  ch07_06_new_uiselector_text.py  ch07_06_new_uiselector_textcontains.py  ch07_06_new_uiselector_textmatches.py  ch07_06_new_uiselector_textstartswith.py  ch_07_06_index_instance.py  ch_07_07_find_element_for_loop.py  ch_07_08_xpath.py  ch_07_08_xpath_conains.py  ch_07_08_xpath_mix_combo_class_text.py  ch_07_09_click_positions.py
chapter/chapter_8/: ch_08_01_clear.py  ch_08_01_click.py  ch_08_01_press_keycode.py  ch_08_01_send_keys.py  ch_08_02_is_displayed.py  ch_08_02_is_enablepy.py  ch_08_02_is_selected.py  ch_08_03_get_function.py  ch_08_03_get_id_value.py  ch_08_03_get_location.py  ch_08_03_get_text_value.py
chapter/chapter_9/: ch_04_04_is_locked_screen.py  ch_04_04_lock_screen.py  ch_04_04_unlock_screen .py  ch_09_01_click.py  ch_09_01_input_device.py  ch_09_01_key_input_actions.py  ch_09_01_long_click.py  ch_09_01_move_screen.py  ch_09_01_pointer_actions.py  ch_09_01_pointer_input.py  ch_09_01_two_fingers.py  ch_09_02_get_toast.py  ch_09_03_context.py  ch_09_04_screenshot_as_base64.py  ch_09_04_screenshot_as_file.py  ch_09_04_screenshot_as_png.py  ch_09_04_screenshot_save_no_param.py  ch_09_04_screenshot_save_with_param.py
(+14 files in other folders)
